edit orderDetail format